--- a/Cluster_Analysis.ipynb
+++ b/Cluster_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cluster Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNp/9AEJ8aCdmjIvpj9Q1f3",
+      "authorship_tag": "ABX9TyOWLco8a/iImPzm/5ztFzoe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,18 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/debangana97/GRIP-Feb-21/blob/main/Cluster_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lCSBSZhW9AGX"
+      },
+      "source": [
+        "# **Name- Debangana Mallick**\r\n",
+        "### GRIP-Sparks Foundation\r\n",
+        "### Data Science and Business Analytics\r\n",
+        "### Task 1- Simple Linear Regression"
       ]
     },
     {
@@ -47,7 +59,7 @@
         "from google.colab import drive\r\n",
         "drive.mount('/content/drive/')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,11 +76,12 @@
         "id": "3RPE_TgRfozq"
       },
       "source": [
+        "#Importing the libraries\r\n",
         "import pandas as pd\r\n",
         "import numpy as np\r\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,10 +95,11 @@
         "outputId": "9b0ff096-2cb1-4f46-9805-2c6d2ccb16c1"
       },
       "source": [
+        "#reading the data from google drive\r\n",
         "data = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Iris.csv')\r\n",
         "data.head(10)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,7 +261,7 @@
         "x = data.iloc[:, [1,2,3,4]].values\r\n",
         "print(x)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +442,7 @@
       "source": [
         "data.isnull().sum()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +505,7 @@
         "plt.ylabel('Within Cluster Sum of Squares(WCSS)')\r\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -537,10 +551,10 @@
       },
       "source": [
         "kmeans = KMeans(n_clusters=3, init='k-means++', max_iter = 300, n_init = 10, random_state=0)\r\n",
-        "y_kmeans = kmeans.fit_predict(x)   #not only fits the model to the data but also returns a dependent variable containing an of numbers where each number corresponds a particular cluster\r\n",
+        "y_kmeans = kmeans.fit_predict(x)   #not only fits the model to the data but also returns a dependent variable containing an array of numbers where each number corresponds a particular cluster\r\n",
         "print(y_kmeans)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +613,7 @@
         "plt.title('K-Means Clustering for the Iris dataset')\r\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
