--- a/Cluster_Analysis.ipynb
+++ b/Cluster_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cluster Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOWLco8a/iImPzm/5ztFzoe",
+      "authorship_tag": "ABX9TyOwFEVagOzujapnM7L+wVmT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "# **Name- Debangana Mallick**\r\n",
         "### GRIP-Sparks Foundation\r\n",
         "### Data Science and Business Analytics\r\n",
-        "### Task 1- Simple Linear Regression"
+        "### Task- Cluster Analysis"
       ]
     },
     {
