--- a/Cluster_Analysis.ipynb
+++ b/Cluster_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cluster Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOwFEVagOzujapnM7L+wVmT",
+      "authorship_tag": "ABX9TyOK73bp0dVGC+SK5cwPWB9b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,19 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/debangana97/GRIP-Feb-21/blob/main/Cluster_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lCSBSZhW9AGX"
-      },
-      "source": [
-        "# **Name- Debangana Mallick**\r\n",
-        "### GRIP-Sparks Foundation\r\n",
-        "### Data Science and Business Analytics\r\n",
-        "### Task- Cluster Analysis"
+        "<a href=\"https://colab.research.google.com/github/debangana97/Data-science-works/blob/main/Cluster_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,7 +44,7 @@
         "outputId": "ead957bc-9120-4d3b-a378-aa70993a1182"
       },
       "source": [
-        "from google.colab import drive\r\n",
+        "from google.colab import drive\n",
         "drive.mount('/content/drive/')"
       ],
       "execution_count": null,
@@ -76,9 +64,9 @@
         "id": "3RPE_TgRfozq"
       },
       "source": [
-        "#Importing the libraries\r\n",
-        "import pandas as pd\r\n",
-        "import numpy as np\r\n",
+        "#Importing the libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
@@ -95,8 +83,8 @@
         "outputId": "9b0ff096-2cb1-4f46-9805-2c6d2ccb16c1"
       },
       "source": [
-        "#reading the data from google drive\r\n",
-        "data = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Iris.csv')\r\n",
+        "#reading the data from google drive\n",
+        "data = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Iris.csv')\n",
         "data.head(10)"
       ],
       "execution_count": null,
@@ -257,8 +245,8 @@
         "outputId": "96bbcd7f-5d45-4e16-d36d-07842369f797"
       },
       "source": [
-        "#data['Species']\r\n",
-        "x = data.iloc[:, [1,2,3,4]].values\r\n",
+        "#data['Species']\n",
+        "x = data.iloc[:, [1,2,3,4]].values\n",
         "print(x)"
       ],
       "execution_count": null,
@@ -493,16 +481,16 @@
         "outputId": "458765f6-4f48-4641-f6e1-0703a88875eb"
       },
       "source": [
-        "from sklearn.cluster import KMeans\r\n",
-        "WCSS = []   #WCSS stands for Within Cluster Sum of Squares\r\n",
-        "for i in range(1,10):      #the for loop calculates the WCSS for each no.of cluster from 1 to 9 and at each iteration creates a K-Means algorithm for i\r\n",
-        "  kmeans = KMeans(n_clusters=i, init='k-means++', max_iter = 300, n_init = 10, random_state=0)\r\n",
-        "  kmeans.fit(x)\r\n",
-        "  WCSS.append(kmeans.inertia_)\r\n",
-        "plt.plot(range(1,10), WCSS)\r\n",
-        "plt.title('Elbow method to find optimal cluster number')\r\n",
-        "plt.xlabel('Clusters')\r\n",
-        "plt.ylabel('Within Cluster Sum of Squares(WCSS)')\r\n",
+        "from sklearn.cluster import KMeans\n",
+        "WCSS = []   #WCSS stands for Within Cluster Sum of Squares\n",
+        "for i in range(1,10):      #the for loop calculates the WCSS for each no.of cluster from 1 to 9 and at each iteration creates a K-Means algorithm for i\n",
+        "  kmeans = KMeans(n_clusters=i, init='k-means++', max_iter = 300, n_init = 10, random_state=0)\n",
+        "  kmeans.fit(x)\n",
+        "  WCSS.append(kmeans.inertia_)\n",
+        "plt.plot(range(1,10), WCSS)\n",
+        "plt.title('Elbow method to find optimal cluster number')\n",
+        "plt.xlabel('Clusters')\n",
+        "plt.ylabel('Within Cluster Sum of Squares(WCSS)')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -550,8 +538,8 @@
         "outputId": "7b4899d0-83dd-4a2f-a111-3d16177757a7"
       },
       "source": [
-        "kmeans = KMeans(n_clusters=3, init='k-means++', max_iter = 300, n_init = 10, random_state=0)\r\n",
-        "y_kmeans = kmeans.fit_predict(x)   #not only fits the model to the data but also returns a dependent variable containing an array of numbers where each number corresponds a particular cluster\r\n",
+        "kmeans = KMeans(n_clusters=3, init='k-means++', max_iter = 300, n_init = 10, random_state=0)\n",
+        "y_kmeans = kmeans.fit_predict(x)   #not only fits the model to the data but also returns a dependent variable containing an array of numbers where each number corresponds a particular cluster\n",
         "print(y_kmeans)"
       ],
       "execution_count": null,
@@ -598,19 +586,19 @@
         "outputId": "b55103a6-b0d0-424b-9894-b01a663cbf59"
       },
       "source": [
-        "#Creating the clusters\r\n",
-        "plt.scatter(x[y_kmeans == 0,0], x[y_kmeans == 0,1], s=100, c='red', label='Iris Setosa Specie')\r\n",
-        "\r\n",
-        "plt.scatter(x[y_kmeans == 1,0], x[y_kmeans == 1,1], s=100, c='yellow', label='Iris Versi-color Specie')\r\n",
-        "\r\n",
-        "plt.scatter(x[y_kmeans == 2,0], x[y_kmeans == 2,1], s=100, c='green', label='Iris Virginica Specie')\r\n",
-        "\r\n",
-        "#Creating the centroids for each cluster\r\n",
-        "plt.scatter(kmeans.cluster_centers_[:,0], kmeans.cluster_centers_[:,1], s=300, c='blue', label = 'Centroids')\r\n",
-        "\r\n",
-        "plt.legend()\r\n",
-        "\r\n",
-        "plt.title('K-Means Clustering for the Iris dataset')\r\n",
+        "#Creating the clusters\n",
+        "plt.scatter(x[y_kmeans == 0,0], x[y_kmeans == 0,1], s=100, c='red', label='Iris Setosa Specie')\n",
+        "\n",
+        "plt.scatter(x[y_kmeans == 1,0], x[y_kmeans == 1,1], s=100, c='yellow', label='Iris Versi-color Specie')\n",
+        "\n",
+        "plt.scatter(x[y_kmeans == 2,0], x[y_kmeans == 2,1], s=100, c='green', label='Iris Virginica Specie')\n",
+        "\n",
+        "#Creating the centroids for each cluster\n",
+        "plt.scatter(kmeans.cluster_centers_[:,0], kmeans.cluster_centers_[:,1], s=300, c='blue', label = 'Centroids')\n",
+        "\n",
+        "plt.legend()\n",
+        "\n",
+        "plt.title('K-Means Clustering for the Iris dataset')\n",
         "plt.show()"
       ],
       "execution_count": null,
