--- a/Decision_Tree_Classifier.ipynb
+++ b/Decision_Tree_Classifier.ipynb
@@ -6,8 +6,7 @@
       "name": "Decision Tree Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPz2VI3wevxXgOSKh+4+nug",
+      "authorship_tag": "ABX9TyM5Gnm7Vz4zMUOwXoVTWWej",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,19 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/debangana97/GRIP-Feb-21/blob/main/Decision_Tree_Classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FJPLe2qP5ai_"
-      },
-      "source": [
-        "# **Name- Debangana Mallick**\r\n",
-        "### GRIP- Sparks Foundation\r\n",
-        "### Data Science and Business Analytics\r\n",
-        "### Task- Decision Tree Classification"
+        "<a href=\"https://colab.research.google.com/github/debangana97/Data-science-works/blob/main/Decision_Tree_Classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,10 +36,10 @@
         "outputId": "452f4108-1f85-4aff-8c7c-dd3f9728fcd0"
       },
       "source": [
-        "from google.colab import drive\r\n",
+        "from google.colab import drive\n",
         "drive.mount('/content/drive/')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,12 +56,12 @@
         "id": "bxkn41Ef65zf"
       },
       "source": [
-        "#Importing the libraries\r\n",
-        "import pandas as pd\r\n",
-        "import numpy as np\r\n",
+        "#Importing the libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,10 +74,10 @@
         "outputId": "59574b05-b758-4fd4-c47d-4a03266da1a2"
       },
       "source": [
-        "data = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Iris.csv')\r\n",
+        "data = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/Iris.csv')\n",
         "data.shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +106,7 @@
       "source": [
         "data.head(10)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +266,7 @@
       "source": [
         "data.isnull().sum()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,12 +307,12 @@
         "outputId": "6fc94aa9-e488-44eb-8ab3-f4bffa3ed1b4"
       },
       "source": [
-        "x = data.iloc[:,1:-1].values\r\n",
-        "y = data.iloc[:,-1].values\r\n",
-        "print(x.shape)\r\n",
+        "x = data.iloc[:,1:-1].values\n",
+        "y = data.iloc[:,-1].values\n",
+        "print(x.shape)\n",
         "print(y.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,11 +330,11 @@
         "id": "ETZjLCu08AaS"
       },
       "source": [
-        "#Splitting into training and testing set\r\n",
-        "from sklearn.model_selection import train_test_split\r\n",
+        "#Splitting into training and testing set\n",
+        "from sklearn.model_selection import train_test_split\n",
         "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.3, random_state=0)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,10 +343,10 @@
         "id": "RUV1JHH297p6"
       },
       "source": [
-        "#Feature Scaling- not required but results in better predictions\r\n",
-        "from sklearn.preprocessing import StandardScaler\r\n",
-        "sc = StandardScaler()\r\n",
-        "x_train = sc.fit_transform(x_train)\r\n",
+        "#Feature Scaling- not required but results in better predictions\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "sc = StandardScaler()\n",
+        "x_train = sc.fit_transform(x_train)\n",
         "x_test = sc.fit_transform(x_test)"
       ],
       "execution_count": null,
@@ -375,12 +362,12 @@
         "outputId": "b7d4d3df-f958-42f0-b6f8-cafd44ca3be3"
       },
       "source": [
-        "#Fitting the decision tree classifier model to the training dataset\r\n",
-        "from sklearn.tree import DecisionTreeClassifier\r\n",
-        "dc_classifier = DecisionTreeClassifier(criterion='entropy', random_state=0)\r\n",
+        "#Fitting the decision tree classifier model to the training dataset\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "dc_classifier = DecisionTreeClassifier(criterion='entropy', random_state=0)\n",
         "dc_classifier.fit(x_train, y_train)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,11 +398,11 @@
         "outputId": "f3fccd30-2c02-4e79-bdc1-06c145485247"
       },
       "source": [
-        "#Predicting the test set result\r\n",
-        "y_pred=dc_classifier.predict(x_test)\r\n",
+        "#Predicting the test set result\n",
+        "y_pred=dc_classifier.predict(x_test)\n",
         "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,12 +467,12 @@
         "outputId": "b71c8406-78ee-4de8-8224-45c4374459a6"
       },
       "source": [
-        "#Text representation\r\n",
-        "from sklearn import tree\r\n",
-        "text_representation = tree.export_text(dc_classifier)\r\n",
+        "#Text representation\n",
+        "from sklearn import tree\n",
+        "text_representation = tree.export_text(dc_classifier)\n",
         "print(text_representation)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,10 +513,10 @@
         "outputId": "93e820bc-b503-4cb4-b7ab-87157cbb9ace"
       },
       "source": [
-        "fig = plt.figure(figsize=(25,20))\r\n",
+        "fig = plt.figure(figsize=(25,20))\n",
         "_ = tree.plot_tree(dc_classifier, feature_names=x, class_names=y, filled=True, )"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -556,10 +543,10 @@
         "outputId": "c33a5feb-7fdf-4e3f-cdeb-9f4f766d0460"
       },
       "source": [
-        "#Predicting a new result\r\n",
+        "#Predicting a new result\n",
         "print(dc_classifier.predict(sc.transform([[5.3,3.6,1.1,0.3]])))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,15 +576,15 @@
         "outputId": "489f400a-1d0e-4d77-908b-43b247a5bb08"
       },
       "source": [
-        "#Evaluating Model performance\r\n",
-        "#Calculating accuracy\r\n",
-        "from sklearn.metrics import confusion_matrix, accuracy_score\r\n",
-        "cm=(confusion_matrix(y_test,y_pred))\r\n",
-        "print(cm)\r\n",
-        "ac=(accuracy_score(y_test,y_pred))*100\r\n",
+        "#Evaluating Model performance\n",
+        "#Calculating accuracy\n",
+        "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+        "cm=(confusion_matrix(y_test,y_pred))\n",
+        "print(cm)\n",
+        "ac=(accuracy_score(y_test,y_pred))*100\n",
         "print(ac,\"%\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +604,7 @@
         "id": "OONosmkDEqLR"
       },
       "source": [
-        "**The accuracy of the model is about 91%.\r\n",
+        "**The accuracy of the model is about 91%.\n",
         "The confusion matrix shows that the model miss classified only 4 times**"
       ]
     }
