--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -6,8 +6,7 @@
       "name": "Simple Linear Regression.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNYMDpsN6BO63cD4oTDttpX",
+      "authorship_tag": "ABX9TyOpA7ITRaIfbuqOYbMvvBKx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,19 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/debangana97/GRIP-Feb-21/blob/main/Simple_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Sn6ZMDEE6SAm"
-      },
-      "source": [
-        "# **Name- Debangana Mallick**\r\n",
-        "### GRIP-Sparks Foundation\r\n",
-        "### Data Science and Business Analytics\r\n",
-        "### Task 1- Simple Linear Regression"
+        "<a href=\"https://colab.research.google.com/github/debangana97/Data-science-works/blob/main/Simple_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -54,12 +41,12 @@
         "id": "O00dleX36PyP"
       },
       "source": [
-        "import pandas as pd\r\n",
-        "import numpy as np\r\n",
-        "import matplotlib.pyplot as plt\r\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,10 +68,10 @@
         "outputId": "43adfbdc-d5de-47b9-fce3-d400fba249ed"
       },
       "source": [
-        "data = pd.read_csv('GRIP- Linear Reg. data.csv')\r\n",
+        "data = pd.read_csv('GRIP- Linear Reg. data.csv')\n",
         "print(data)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +120,7 @@
       "source": [
         "data.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,14 +232,14 @@
         "outputId": "dd20d683-9bbc-4cd4-b00c-6afc55981698"
       },
       "source": [
-        "#Data visualization\r\n",
-        "sns.factorplot(x= 'Hours', y= 'Scores', data=data)\r\n",
-        "plt.title('Hours vs Scores')\r\n",
-        "plt.xlabel('Hours devoted to studies')\r\n",
-        "plt.ylabel('Scores obtained')\r\n",
+        "#Data visualization\n",
+        "sns.factorplot(x= 'Hours', y= 'Scores', data=data)\n",
+        "plt.title('Hours vs Scores')\n",
+        "plt.xlabel('Hours devoted to studies')\n",
+        "plt.ylabel('Scores obtained')\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,12 +292,12 @@
         "outputId": "5964f75c-4cdb-4254-a896-a0a8c413a5ed"
       },
       "source": [
-        "x = data.iloc[:, :-1].values\r\n",
-        "print(x)\r\n",
-        "y = data.iloc[:, 1].values\r\n",
+        "x = data.iloc[:, :-1].values\n",
+        "print(x)\n",
+        "y = data.iloc[:, 1].values\n",
         "print(y)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,11 +353,11 @@
         "outputId": "a4a7a9f2-9c0e-4e99-abf0-85ef0c6ebc32"
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\r\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.25, random_state=0)\r\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.25, random_state=0)\n",
         "print(x_train, x_test)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,11 +410,11 @@
         "outputId": "82a066c6-0c1c-400f-fe01-386469b2beda"
       },
       "source": [
-        "from sklearn.linear_model import LinearRegression\r\n",
-        "lin_reg = LinearRegression()\r\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "lin_reg = LinearRegression()\n",
         "lin_reg.fit(x_train, y_train)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,15 +441,15 @@
         "outputId": "fc839c10-6c8a-4e0b-9c14-2834f5e95a7b"
       },
       "source": [
-        "#Linear Regression eqn.: y = a + bx, where 'a' is the intercept and 'b' is the slope(regression coefficient)\r\n",
-        "print('Linear regression coefficient: ', lin_reg.coef_)\r\n",
-        "print('Model intercept: ', lin_reg.intercept_)\r\n",
-        "plt.scatter(x, y)\r\n",
-        "reg_line = lin_reg.coef_*x + lin_reg.intercept_\r\n",
-        "plt.plot(x, reg_line, color='red')\r\n",
+        "#Linear Regression eqn.: y = a + bx, where 'a' is the intercept and 'b' is the slope(regression coefficient)\n",
+        "print('Linear regression coefficient: ', lin_reg.coef_)\n",
+        "print('Model intercept: ', lin_reg.intercept_)\n",
+        "plt.scatter(x, y)\n",
+        "reg_line = lin_reg.coef_*x + lin_reg.intercept_\n",
+        "plt.plot(x, reg_line, color='red')\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,11 +494,11 @@
         "outputId": "b17d5478-5cbc-46bd-8467-b9394909f9db"
       },
       "source": [
-        "y_pred = lin_reg.predict(x_test)\r\n",
-        "compare = pd.DataFrame({'TrueValue': y_test, 'PredictedValue': y_pred})\r\n",
+        "y_pred = lin_reg.predict(x_test)\n",
+        "compare = pd.DataFrame({'TrueValue': y_test, 'PredictedValue': y_pred})\n",
         "compare"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,12 +595,12 @@
         "outputId": "9564159b-c97c-4f73-c9fd-53bcfb841bfc"
       },
       "source": [
-        "#Plotting residual plot\r\n",
-        "residual = y_test - y_pred\r\n",
-        "plt.scatter(x_test, residual, color='orange')\r\n",
+        "#Plotting residual plot\n",
+        "residual = y_test - y_pred\n",
+        "plt.scatter(x_test, residual, color='orange')\n",
         "plt.show() "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -650,10 +637,10 @@
         "outputId": "7fb956ef-86f9-46ff-e7c4-59afd9a0288c"
       },
       "source": [
-        "plt.scatter(y_test, y_pred)\r\n",
+        "plt.scatter(y_test, y_pred)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -689,13 +676,13 @@
         "outputId": "f799c21b-de80-4cf9-d427-45180b833e5a"
       },
       "source": [
-        "#Predicting a new test data\r\n",
-        "hours_new = [[9.25]]\r\n",
-        "pred = lin_reg.predict(hours_new)\r\n",
-        "print(\"No.of Hours studied = {}\".format(hours_new))\r\n",
+        "#Predicting a new test data\n",
+        "hours_new = [[9.25]]\n",
+        "pred = lin_reg.predict(hours_new)\n",
+        "print(\"No.of Hours studied = {}\".format(hours_new))\n",
         "print(\"Predicted Score of the student = {}\".format(pred[0]))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,11 +713,11 @@
         "outputId": "ff919b4c-3c73-4a8d-8dd7-b184c67fb36b"
       },
       "source": [
-        "from sklearn.metrics import mean_absolute_error\r\n",
-        "MAE = mean_absolute_error\r\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "MAE = mean_absolute_error\n",
         "MAE(y_test, y_pred)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,11 +752,11 @@
         "outputId": "fc6e4f57-27dd-4145-8b38-6bb2151513e1"
       },
       "source": [
-        "#Calculating the value of r-square\r\n",
-        "r_sq = lin_reg.score(x, y)\r\n",
+        "#Calculating the value of r-square\n",
+        "r_sq = lin_reg.score(x, y)\n",
         "print('coefficient of determination:', r_sq)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
